--- a/Support.html
+++ b/Support.html
@@ -169,7 +169,7 @@
         </div>
         <nav>
             <ul>
-                <li><a href="Site.html">Home</a></li> <!-- Página inicial -->
+                <li><a href="index.html">Home</a></li> <!-- Página inicial -->
                 <li><a href="history.html">Brand History</a></li>
                 <li><a href="shop.html">Shop</a></li>
                 <li><a href="Support.html" class="active">Support</a></li> <!-- Página de suporte -->
