--- a/history.html
+++ b/history.html
@@ -165,7 +165,7 @@
         <!-- Menu de navegação -->
         <nav>
             <ul>
-                <li><a href="Site.html">Home</a></li> <!-- Página inicial -->
+                <li><a href="index.html">Home</a></li> <!-- Página inicial -->
                 <li><a href="#historia">Brand History</a></li>
                 <li><a href="shop.html">Shop</a></li>
                 <li><a href="Support.html">Support</a></li> <!-- Página de suporte -->
