--- a/shop.html
+++ b/shop.html
@@ -193,7 +193,7 @@
         <!-- Menu de navegação -->
         <nav>
             <ul>
-                <li><a href="Site.html">Home</a></li> <!-- Página inicial -->
+                <li><a href="index.html">Home</a></li> <!-- Página inicial -->
                 <li><a href="history.html">Brand History</a></li> <!-- Página de história da marca -->
                 <li><a href="shop.html">Shop</a></li> <!-- Página da loja -->
                 <li><a href="Support.html">Support</a></li> <!-- Página de suporte -->
