--- a/Sweatshirt.html
+++ b/Sweatshirt.html
@@ -147,7 +147,7 @@
     <header>
         <!-- Contêiner do logotipo -->
         <div class="logo-container">
-            <a href="Site.html">
+            <a href="index.html">
                 <img src="YWF.png" alt="YWF Logo" style="height: 4em; width: auto;">
                 <div class="logo">YWF♻️</div>
             </a>
