--- a/tshirtpurchase.html
+++ b/tshirtpurchase.html
@@ -251,7 +251,7 @@
         </div>
         <nav>
             <ul>
-                <li><a href="Site.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="history.html">Brand History</a></li>
                 <li><a href="shop.html">Shop</a></li>
                 <li><a href="Support.html">Support</a></li>
